[project]
name = "comfyui_cache"
description = "sdCache, a tool that converts ComfyUI workflows into WeChat Mini Program, Douyin Mini Program, and H5 with one click, and supports payments."
version = "0.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/amaozhao/ComfyUI_Cash"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Cache"
Icon = ""
