[project]
name = "comfyui_cash"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["websockets", "aiohttp"]

[project.urls]
Repository = "https://github.com/amaozhao/ComfyUI_Cash"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "amao"
DisplayName = "ComfyUI_Cash"
Icon = ""

# key = "6df3a0cb-639f-4dfe-b509-1ea61850b572"